syntax = "proto3";

option go_package = "github.com/bd878/gallery/server/threads/internal/controller/distributed";

message AppendCommand {
	int64   id = 1;
	int64   user_id = 2;
	int64   parent_id = 3;
	string  name = 4;
	bool    private = 5;
}

message UpdateCommand {
	int64   id = 1;
	int64   user_id = 2;
	int64   parent_id = 3;
	string  name = 4;
	int32   private = 5;
}

message DeleteCommand {
	int64   id = 1;
	int64   user_id = 2;
}

message PublishCommand {
	int64   id = 1;
	int64   user_id = 2;
}

message PrivateCommand {
	int64   id = 1;
	int64   user_id = 2;
}
